# CRMuSR2

./: CMakeLists.txt  CRMuSR2.c++  README.md
cmake/: CRMuSR2CompileConfig.cmake  GlobalCompileConfig.cmake  LookForCADMesh.cmake  LookForCRMuSR2OfflineData.cmake  LookForGenFit.cmake  LookForMustard.cmake  LookForSomething.cmake.template
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/analysis/: CMakeLists.txt
src/app/analysis/CRMuSR2/AnaCRMuSR2/: AnaCRMuSR2.c++  CMakeLists.txt
src/app/reconstruction/: CMakeLists.txt
src/app/simulation/: CMakeLists.txt
src/app/simulation/SimCRMu/: Analysis.c++  Analysis.h++  CMakeLists.txt  DefaultMacro.h++  RunManager.c++  RunManager.h++  SimCRMu.c++  SimCRMu.h++
src/app/simulation/SimCRMu/Action/: ActionInitialization.c++  ActionInitialization.h++  EventAction.c++  EventAction.h++  PrimaryGeneratorAction.c++  PrimaryGeneratorAction.h++  RunAction.c++  RunAction.h++  TrackingAction.c++  TrackingAction.h++
src/app/simulation/SimCRMu/Detector/: DetectorConstruction.c++  DetectorConstruction.h++
src/app/simulation/SimCRMu/Messenger/: AnalysisMessenger.c++  AnalysisMessenger.h++  DetectorMessenger.h++  PrimaryGeneratorActionMessenger.c++  PrimaryGeneratorActionMessenger.h++
src/app/simulation/SimCRMu/SD/: PDRPMSD.c++  PDRPMSD.h++  PDRSD.c++  PDRSD.h++
src/app/simulation/SimCRMu/scripts/: vis_optical.mac
src/app/utility/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/analysis/: CMakeLists.txt
src/lib/data/: CMakeLists.txt
src/lib/data/CRMuSR2/Data/: HPTrackModel.h++  HPTrackStateModel.h++  PhotosensorDataModel.h++  ScintillatorDataModel.h++  SimVertex.h++  WaveformModel.h++
src/lib/data/CRMuSR2/Data/internal/: DigiModelHeader.h++  HitModelHeader.h++  SimHitTrackTruthModel.h++
src/lib/detector/: CMakeLists.txt
src/lib/detector/CRMuSR2/Detector/Definition/: PDR.c++  PDR.h++  Target.c++  Target.h++  World.c++  World.h++
src/lib/detector/CRMuSR2/Detector/Description/: GeometryReference.c++  GeometryReference.h++  PDRModel.c++  PDRModel.h++  PDRScintillator.c++  PDRScintillator.h++  PDRSiPM.c++  PDRSiPM.h++  PDRSupport.c++  PDRSupport.h++  Target.c++  Target.h++  World.c++  World.h++
src/lib/simulation/: CMakeLists.txt
src/lib/simulation/CRMuSR2/Simulation/Action/: NeutrinoKillerMessenger.h++  NeutrinoKillerMessenger.inl  NeutrinoKillerSteppingAction.c++  NeutrinoKillerSteppingAction.h++  NeutrinoKillerSteppingAction.inl
src/lib/simulation/CRMuSR2/Simulation/Hit/: PDRPMSimHit.h++  PDRSimHit.h++
src/lib/simulation/CRMuSR2/Simulation/Messenger/: NumericMessenger.h++  NumericMessenger.inl
src/lib/simulation/CRMuSR2/Simulation/Physics/: StandardPhysicsList.c++  StandardPhysicsList.h++  StandardPhysicsListMessenger.c++  StandardPhysicsListMessenger.h++
src/lib/simulation/CRMuSR2/Simulation/SD/: PDRPMSD.c++  PDRPMSD.h++  PDRSD.c++  PDRSD.h++
