# file(GLOB_RECURSE AppCRMuSR2Reconstruction_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CRMuSR2*.c++)
# add_library(AppCRMuSR2Reconstruction STATIC ${AppCRMuSR2Reconstruction_SOURCES})
# target_include_directories(AppCRMuSR2Reconstruction PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
# target_link_libraries(AppCRMuSR2Reconstruction PUBLIC CRMuSR2Data
#                                                    CRMuSR2Detector
#                                                    CRMuSR2Reconstruction
#                                                    Mustard::Mustard)

# add_subdirectory(CRMuSR2SmearCRMuSR2)
