# file(GLOB_RECURSE AppCRMuSR2Utility_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CRMuSR2*.c++)
# add_library(AppCRMuSR2Utility STATIC ${AppCRMuSR2Utility_SOURCES})
# target_include_directories(AppCRMuSR2Utility PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
# target_link_libraries(AppCRMuSR2Utility PUBLIC CRMuSR2Detector
#                                             CRMuSR2Simulation
#                                             CRMuSR2Utility
#                                             Mustard::Mustard) 
